# uma-hw-pkg

./: CMakeLists.txt  README.md
DAQ_Advantech/: CDataAcquisition.cpp  CDataAcquisition.h  CMakeLists.txt  Driver.h  main.cpp
Domotics_IpPower/: CDomoticsIpPowerApp.cpp  CDomoticsIpPowerApp.h  CMakeLists.txt  main.cpp
LibeliumWSN/: CLibeliumWSNApp.cpp  CLibeliumWSNApp.h  CMakeLists.txt  main.cpp  waspmote_firmware.pde
MobileRobot_Giraff/: CGiraffCommunication.cpp  CGiraffCommunication.h  CGiraffMotorsCom.cpp  CGiraffMotorsCom.h  CMakeLists.txt  CRobotGiraffApp.cpp  CRobotGiraffApp.h  CRobotGiraffAppOri.cpp  CommonData.cpp  CommonData.h  main.cpp
MobileRobot_Pioneer/: CMakeLists.txt  CRobotPioneerApp.cpp  CRobotPioneerApp.h  main.cpp
eNeck/: CMakeLists.txt  CNeckApp.cpp  CNeckApp.h  main.cpp
